# imgui

./: CMakeLists.txt  Spectrum.md  Spectrum.txt  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  spectrum.cpp  spectrum.h
docs/: README.md  Spectrum.md
examples/example_allegro5/: main.cpp
examples/example_glfw_opengl2/: example_glfw_opengl2.vcxproj  example_glfw_opengl2.vcxproj.filters  main.cpp
examples/example_glfw_opengl3/: Makefile  example_glfw_opengl3.vcxproj  example_glfw_opengl3.vcxproj.filters  main.cpp
examples/example_glfw_vulkan/: main.cpp
examples/example_glut_opengl2/: main.cpp
examples/example_marmalade/: main.cpp
examples/example_sdl_opengl2/: main.cpp
examples/example_sdl_opengl3/: main.cpp
examples/example_sdl_vulkan/: main.cpp
examples/example_win32_directx10/: example_win32_directx10.vcxproj  example_win32_directx10.vcxproj.filters  main.cpp
examples/example_win32_directx11/: example_win32_directx11.vcxproj  example_win32_directx11.vcxproj.filters  main.cpp
examples/example_win32_directx12/: example_win32_directx12.vcxproj  example_win32_directx12.vcxproj.filters  main.cpp
examples/example_win32_directx9/: example_win32_directx9.vcxproj  example_win32_directx9.vcxproj.filters  main.cpp
